Avoid "jumping" while filtering

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
     background:  white;
 }
@@ -5,3 +9,4 @@ body {
 th {
   text-transform: capitalize;
 }
+
